--- a/assets/icomoon/style.css
+++ b/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?2w0mec');
-  src:  url('fonts/icomoon.eot?2w0mec#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?2w0mec') format('truetype'),
-    url('fonts/icomoon.woff?2w0mec') format('woff'),
-    url('fonts/icomoon.svg?2w0mec#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?xyjw6g');
+  src:  url('fonts/icomoon.eot?xyjw6g#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?xyjw6g') format('truetype'),
+    url('fonts/icomoon.woff?xyjw6g') format('woff'),
+    url('fonts/icomoon.svg?xyjw6g#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-spinner3:before {
+  content: "\e97c";
+}
+.icon-spinner9:before {
+  content: "\e982";
+}
 .icon-plus:before {
   content: "\ea0a";
 }
@@ -66,9 +72,6 @@
 }
 .icon-loop:before {
   content: "\ea2d";
-}
-.icon-spinner7:before {
-  content: "\e980";
 }
 .icon-bin:before {
   content: "\e9ac";
